# SSHortcut

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/sshortcut/: app.py
src/sshortcut/components/: form.py  ssh_option.py
src/sshortcut/models/: database_connection.py  ssh_connection.py
src/sshortcut/objects/: config_storage.py
src/sshortcut/styles/: app.tcss
src/sshortcut/utils/: config.py
tests/: test_models.py
